[package]
name = "nextrail"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
v4l = "*"
anyhow = "*"
jpeg-decoder = "*"
turbojpeg = {version = "0.2", features = ["image"]}
rayon = "*"
image = "*"
libva-sys = "*"