[package]
name = "nextrail"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9"
log = "0.4"
v4l = "0.12"
anyhow = "1.0"
jpeg-decoder = "0.2"
#turbojpeg = {version = "0.2", features = ["image"]}
rayon = "1.5"
image = "*"
ndarray = "*"
nshare = { version = "0.9", features = ["ndarray", "image"] }
#libva-sys = "*"
chrono = "*"